TAG: qcreports_db-4-3-4-10
DATE: 07/27/2010
STAFF: lec
CHANGES: TR10136
1) fix weekly/PRB_StrainJAX2.py

TAG: qcreports_db-4-3-4-9
TAG: qcreports_db-4-3-4-8
DATE: 07/22/2010
STAFF: lec
CHANGES: TR10136
1) fix mgd/PRB_StrainJAX3.py
2) fix weekly/PRB_StrainJAX2.py
3) fix weekly/PRB_StrainJAX7.sql
4) fix weekly/PRB_StrainJAX8.sql
select all MMRRC ids, not just MMNC

TAG: qcreports_db-4-3-4-7
DATE: 07/21/2010
STAFF: lec
CHANGES:
1) TR9316/genmapload
2) alomrkload
3) gocfpload

TAG: qcreports_db-tr6839-BP
DATE: 07/13/2010
STAFF: lec
CHANGES:
1) branch point tag for TR6839

TAG: qcreports_db-4-3-4-6
DATE: 07/08/2010
STAFF: lec
CHANGES:
1) TR9316/genmapload

TAG: qcreports_db-4-3-4-5
DATE: 07/01/2010
STAFF: lec
CHANGES:
1) TR10208/MRK_GmNoGeneModel.sql
2) TR10228/ALL_TransgeneDiff.sql
3) TR10268/GXD_SpecNoImage.sql
4) TR10270/GXD_SpecImageDiffFigure.sql

TAG: qcreports_db-4-3-4-4
DATE: 06/22/2010
STAFF: lec
CHANGES:
1) TR10264; MGD/GXD_GenotypeHemi.sql

TAG: qcreports_db-4-3-4-3
DATE: 05/19/2010
STAFF: lec
CHANGES:
1) TR10204; mgd/GXD_SpecTheiler.sql, mgd/GXD_SpecTheilerAge.py

TAG: qcreports_db-4-3-4-2
DATE: 05/19/2010
STAFF: dbm
CHANGES:
1) TR10039; mgd/MRK_GOIEA.py; Changed shire to prodwww in URL
2) TR10039; mgd/MRK_GORCA.py; Changed shire to prodwww in URL
3) TR10039; mgd/MRK_NoGO.py; Changed shire to prodwww in URL

TAG: qcreports_db-4-3-4-1
DATE: 05/13/2010
STAFF: lec
CHANGES:
1) TR10601;mgd/GXD_Stats.py;added J:157819 to list of electronic reports

TAG: qcreports_db-4-3-3-6
DATE: 04/27/2010
STAFF: lec
CHANGES:
TR9777
1) qcr.html: added uniprotload; removed swissload

TAG: qcreports_db-4-3-3-5
DATE: 04/07/2010
STAFF: lec
CHANGES:
TR10136
2. Public JAX strains/Alleles used in Genotype/No Strain/Genotype Association
   (weekly/PRB_StrainJAX2.py)

3. JAX Strains w/ Genotype Associations where the Markers/Alleles of the 
   Strain record do not exactly match the Markers/Alleles of the Genotype record
   (mgd/PRB_StrainJAX3.py)

4. New JR##s created in the past week