@@ -61,14 +61,14 @@ if ( $i == "ALL_ImmuneAnnot.py" || $i == "ALL_Progress.py" ) then
 	ln -s $QCOUTPUTDIR/`basename $i py`${DATE}.rpt $QCOUTPUTDIR/`basename $i py`current.rpt
 else if ( $i == "PRB_StrainJAX2.py" ) then
         echo "$QCOUTPUTDIR/`basename $i py`jrs.[0-9]*.rpt" | tee -a ${LOG}
-        echo "$QCOUTPUTDIR/`basename $i py`mmnc.[0-9]*.rpt" | tee -a ${LOG}
+        echo "$QCOUTPUTDIR/`basename $i py`mmrrc.[0-9]*.rpt" | tee -a ${LOG}
 	mv -f $QCOUTPUTDIR/`basename $i py`jrs.[0-9]*.rpt $QCSTRAINARCHIVE
-	mv -f $QCOUTPUTDIR/`basename $i py`mmnc.[0-9]*.rpt $QCSTRAINARCHIVE
+	mv -f $QCOUTPUTDIR/`basename $i py`mmrrc.[0-9]*.rpt $QCSTRAINARCHIVE
 	rm -rf $QCOUTPUTDIR/`basename $i py`jrs.current.rpt
-	rm -rf $QCOUTPUTDIR/`basename $i py`mmnc.current.rpt
+	rm -rf $QCOUTPUTDIR/`basename $i py`mmrrc.current.rpt
 	$i >>& ${LOG}
 	ln -s $QCOUTPUTDIR/`basename $i py`jrs.${DATE}.rpt $QCOUTPUTDIR/`basename $i py`jrs.current.rpt
-	ln -s $QCOUTPUTDIR/`basename $i py`mmnc.${DATE}.rpt $QCOUTPUTDIR/`basename $i py`mmnc.current.rpt
+	ln -s $QCOUTPUTDIR/`basename $i py`mmrrc.${DATE}.rpt $QCOUTPUTDIR/`basename $i py`mmrrc.current.rpt
 else if ( $i == "MTB_Triage.py" ) then
         echo "$QCOUTPUTDIR/`basename $i py`[0-9]*.txt" | tee -a ${LOG}
 	mv -f $QCOUTPUTDIR/`basename $i py`[0-9]*.txt $QCMTBARCHIVE
